Updated form integration with Getform

--- a/index.html
+++ b/index.html
@@ -15,12 +15,10 @@
   <main>
     <section class="form-section">
       <!-- Update the form action with your Staticman endpoint if you plan to use it -->
-      <form id="achievementForm" 
-            action="https://staticman.net/v3/entry/Reyansh-Niranjan/cousins-achievements/main/achievements" 
-            method="POST">
-        <input type="text" name="fields[name]" placeholder="Your Name" required>
-        <input type="text" name="fields[achievement]" placeholder="Your Achievement" required>
-        <button type="submit">Submit Achievement</button>
+      <form action="https://getform.io/f/YOUR_NEW_KEY" method="POST">
+        <input type="text" name="name" placeholder="Your Name" required>
+        <input type="text" name="achievement" placeholder="Your Achievement" required>
+        <button type="submit">Submit</button>
       </form>
     </section>
 
