--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <main>
     <section class="form-section">
       <!-- Update the form action with your Staticman endpoint if you plan to use it -->
-      <form action="https://getform.io/f/YOUR_NEW_KEY" method="POST">
+      <form action="https://getform.io/f/bllyxmxb" method="POST">
         <input type="text" name="name" placeholder="Your Name" required>
         <input type="text" name="achievement" placeholder="Your Achievement" required>
         <button type="submit">Submit</button>
