--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 
   <script>
   // Replace these placeholders with your actual form ID and token.
-  const formId = 'bllyxmxb';
-  const token = 'WqvblsqvQauk09w8LnuVCU0lULfsXAoFeI5tGilGbwJiICFDQ0mhqgyevrWz';
-  const url = `https://api.getform.io/v1/forms/${formId}?token=${token}`;
+  const formId = "bllyxmxb";
+  const token = "WqvblsqvQauk09w8LnuVCU0lULfsXAoFeI5tGilGbwJiICFDQ0mhqgyevrWz";
+  const url = "https://api.getform.io/v1/forms/${formId}?token=${token}";
 
   fetch(url)
     .then(response => {
