--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 Cousins Achievements | Built with ❤️</p>
+    <p>&copy; 2025 Cousins Achievements</p>
   </footer>
 
   <script>
