--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   // Replace these placeholders with your actual form ID and token.
   const formId = "bllyxmxb";
   const token = "WqvblsqvQauk09w8LnuVCU0lULfsXAoFeI5tGilGbwJiICFDQ0mhqgyevrWz";
-  const url = "https://api.getform.io/v1/forms/${formId}?token=${token}";
+  const url = `https://api.getform.io/v1/forms/${formId}?token=${token}`; // Fixed template literal
 
   fetch(url)
     .then(response => {
